--- a/bin/resources/App.fxml
+++ b/bin/resources/App.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -26,6 +27,7 @@
                   <Font name="Arial" size="20.0" />
                </font>
             </Label>
+            <Button layoutX="250.0" layoutY="639.0" mnemonicParsing="false" onAction="#start" prefHeight="52.0" prefWidth="303.0" text="Show me the path with the least delays!" />
          </children>
       </AnchorPane>
    </children>
